# pyo3func

./: .gitignore  Cargo.toml  pyproject.toml  test.py
proto/: service.proto
src/: build.rs  function.rs  lib.rs
