[package]
name = "pyo3func"
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3func"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
pyo3-asyncio = { version = "0.15.0", features = ["attributes", "async-std-runtime"] }
once_cell = "1.9.0"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.19"

[build-dependencies]
tonic-build = "0.6"
